# isaac_mission_dispatch

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  deps.bzl
bzl/: BUILD  pylint.py  pylintrc  python.bzl  pytype.py  requirements.txt  requirements_linting.txt  requirements_linting_lock.txt  requirements_lock.txt
charts/: .helmignore  Chart.yaml  README.md  values.yaml
charts/templates/: NOTES.txt  _helpers.tpl  mission-database.yaml  mission-dispatch.yaml  mosquitto.yaml
charts/templates/database/: deployment.yaml  ingress.yaml  secret.yaml  service-internal.yaml  service.yaml
charts/templates/dispatch/: deployment.yaml
charts/templates/mosquitto/: configmap.yaml  deployment.yaml  service.yaml
cloud_common/objects/: __init__.py  apriltag_results.py  common.py  detection_results.py  mission.py  object.py  objective.py  robot.py
docker/: Dockerfile  Dockerfile.base
docker_compose/: .env  mission_dispatch_services.yaml  mission_dispatch_services_arm64.yaml  vda5050-adapter-examples.yaml
docs/mcp_tutorial/: README.md
scripts/: BUILD  pick_and_place_ui.py  run_copyright_update.sh  run_dev.sh
